# Smart-Monitoring-and-Safety-System

./: .gitignore  CMakeLists.txt  CameraController.cpp  CameraController.h  MotionSensor.cpp  MotionSensor.h  QT Test cases.docx  README.md  ReadMe.md  SensorMsg.cxx  SensorMsgPubSubTypes.cxx  SensorMsgPubSubTypes.h  SensorMsgPublisher  SensorMsgPublisher.cpp  SensorMsgSubscriber  SensorMsgSubscriber.cpp  fakesensor.h  main.cpp  qwt-example  window.cpp  window.h
Marketing/: DeleteMe.txt
docs/: I2C_Communication_Explanation.md  Smart Monitoring And Safety System schematic v1.0.pptx  TEAM MEMBERS CONTRIBUTION.docx
docs/Test Cases/: Buzzer_Test_Cases.docx  FAST_DDS.docx  Motion_Sensor_testcase.docx  QT Test cases.docx  Test Case 1.docx
docs/design/: System Class Diagram.docx  System Hardware Wiring.pptx
docs/images/: Readme.txt
qwt-example_autogen/EWIEGA46WW/: moc_window.cpp
src/: CMakeCache.txt  CMakeLists.txt  CameraManager.h  Makefile  MotionSensor.cpp  MotionSensor.h  MotionSensorHandler.cpp  SafePrint.h  SensorMsg.h  SensorMsg.idl  SensorMsgPublisher.cpp  SensorMsgPublisher.h  SensorMsgSubscriber  SensorMsgSubscriber.cpp  SensorMsgSubscriber.h  SmartMonitoringAndSafetySystem bkp.cpp  SmartMonitoringAndSafetySystem.cpp  TMP117TemperatureSensor.cpp  TMP117TemperatureSensor.h  buzzer.cpp  buzzer.h  cmake_install.cmake  gpioevent.cpp  gpioevent.h  libcam2opencv.cpp  libcam2opencv.h  main.cpp  smart_system  window.cpp  window.h
src/SensorMsgSubscriber_autogen/: moc_predefs.h
src/SensorMsgSubscriber_autogen/EWIEGA46WW/: moc_window.cpp.d
src/SensorMsg_autogen/: moc_predefs.h
src/TestingUtils/: SmartMonitoringAndSafetySystem_v1.cpp  SmartMonitoringAndSafetySystem_v2.cpp  SmartMonitoringAndSafetySystem_v4.cpp  SmartMonitoringAndSafetySystem_v5.cpp  TMP117Sensor0x48.cpp  TMP117Sensor0x49.cpp  buzzer_bkp.h  buzzer_control.cpp
src/smart_system_autogen/EWIEGA46WW/: moc_window.cpp  moc_window.cpp.d
